@@ -164,7 +164,15 @@ Last-Update: 2022-06-16
          </widget>
 --- a/pcmanfm/desktoppreferencesdialog.cpp
 +++ b/pcmanfm/desktoppreferencesdialog.cpp
-@@ -208,6 +208,9 @@ void DesktopPreferencesDialog::applySett
+@@ -120,6 +120,7 @@ DesktopPreferencesDialog::DesktopPrefere
+   ui.trashBox->setChecked(ds.contains(QLatin1String("Trash")));
+   ui.computerBox->setChecked(ds.contains(QLatin1String("Computer")));
+   ui.networkBox->setChecked(ds.contains(QLatin1String("Network")));
++  ui.lubuntuManualBox->setChecked(ds.contains(QLatin1String("Lubuntu Manual")));
+ 
+   connect(ui.buttonBox->button(QDialogButtonBox::Apply), &QPushButton::clicked,
+           this, &DesktopPreferencesDialog::onApplyClicked);
+@@ -208,6 +209,9 @@ void DesktopPreferencesDialog::applySett
    if(ui.networkBox->isChecked()) {
        ds << QLatin1String("Network");
    }
